# engram-context-engine

./: .gitignore  00-README.md  01-upstream-inventory-serena.md  02-upstream-inventory-mempalace.md  03-upstream-inventory-claude-context.md  04-integration-surface-map.md  05-link-layer-design.md  06-retrieval-router-design.md  07-mcp-surface.md  08-feature-mapping.md  09-repo-layout-and-setup.md  10-phased-roadmap.md  11-risks-and-open-questions.md  12-glossary.md  CHANGELOG.md  README.md  pyproject.toml  setup.sh
deploy/: compose.yaml
deploy/units/: README.md  ai.engram.plist
openspec/: project.md
openspec/changes/init-engram/: design.md  proposal.md  tasks.md
openspec/specs/engram-cli/: spec.md
openspec/specs/engram-tools/: spec.md
src/engram/: cli.py  config.py  events.py  server.py
tests/fixtures/: fake_cc.py  fake_mempalace.py  fake_serena.py  fake_upstream.py
tests/unit/: test_anchor_tools.py  test_cache.py  test_cc_hook_install.py  test_change_log.py  test_contradicts.py  test_description_lint.py  test_dispatcher.py  test_entities.py  test_events.py  test_file_edit_interceptor.py  test_health.py  test_hook_inbox.py  test_init.py  test_link_store.py  test_mem_add_anchor.py  test_mem_search_query.py  test_notify_tool.py  test_proxy.py  test_reconcile_dirty.py  test_reconciler.py  test_registry.py  test_rename_interceptor.py  test_router.py  test_sample_workspace.py  test_scheduler.py  test_server.py  test_smoke.py  test_status.py  test_supervisor_units.py  test_vec_enrich.py  test_wal_tailer.py  test_warmup.py  test_where_decision.py  test_why.py
(+46 files in other folders)
